@startuml

title __ARMS's Class Diagram__\n

  package org.firstinspires.ftc.teamcode {
    package org.firstinspires.ftc.teamcode.arms {
      class ArmsAction {
          - opMode : LinearOpMode
          - telemetry : Telemetry
          - hardwareMap : HardwareMap
          - autonomous : boolean
          + ArmsAction()
          + climbOnLander()
          + descendFromLander()
          + descendFromLanderAutonomous()
          + hitMineral()
          + moveMineralArmRight()
          + moveMineralArmLeft()
          + extendMineralArm()
          + contractMineralArm()
          + changeDirectionMineralArmBrush()
          + dropMascot()
          - setMineralBoxPosition()
          + setMineralBoxTo0()
          + setMineralBoxTo45()
          + stopMineralBrush()
          + moveMineralArmToPark()
          + stopAll()
          - setCollectionMotorsToEncoder()
          - setCollectionMotorsWithoutEncoder()
          + moveMineralArmToLander()
          + moveMineralArmToCrater()
      }
    }
  }
  

  package org.firstinspires.ftc.teamcode {
    package org.firstinspires.ftc.teamcode.arms {
      class ArmsMotors {
          + climbMotor : DcMotor
          + collectMotorMove1 : DcMotor
          + collectMotorMove2 : DcMotor
          + collectMotorExtend : DcMotor
          + ArmsMotors()
          + setMode()
      }
    }
  }
  

  package org.firstinspires.ftc.teamcode {
    package org.firstinspires.ftc.teamcode.arms {
      class ArmsServos {
          ~ mineralHit : Servo
          ~ mineralArmBrush : CRServo
          + mineralBoxTilt : Servo
          ~ macotBoxTilt : Servo
          ~ ArmsServos()
      }
    }
  }
  

  ArmsAction o-- ArmsServos : armsServos
  ArmsAction o-- ArmsMotors : armsMotors


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
